sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:7: error: not found: value j
      if (plusPetit(j,j+1)==true){
                    ^AlgBubbleSort1:7: error: not found: value j
      if (plusPetit(j,j+1)==true){
                      ^AlgBubbleSort1:8: error: not found: value j
        echange(j,j+1)
                ^AlgBubbleSort1:8: error: not found: value j
        echange(j,j+1)
                  ^